# src/routes/artist.routes.js
@@ -1,6 +1,5 @@
 import express from "express";
 import artistService from "../service/artistService.js";
-import subscriptionService from "../service/subscriptionService.js";
 import { authenticateToken } from "../middleware/authMiddleware.js";
 import asyncHandler from "../middleware/asyncHandler.js";
 import { success } from "../model/dto/response.js";
@@ -28,7 +27,17 @@ router.get(
   "/",
   asyncHandler(async (req, res) => {
     // #swagger.tags = ['Artist']
-    const artists = await artistService.getArtists();
+    const { page, size } = req.params;
+    const artists = await artistService.getArtists({ page, size });
+    success(res, artists);
+  })
+);
+router.get(
+  "/:id",
+  asyncHandler(async (req, res) => {
+    // #swagger.tags = ['Artist']
+    const { id } = req.params;
+    const artists = await artistService.getArtist({ id: id.id });
     success(res, artists);
   })
 );
